fix(components): correct padding top for hero on mobile

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -67,7 +67,7 @@
 
   @media (max-width: $mantine-breakpoint-sm) {
     padding-bottom: rem(80px);
-    padding-top: rem(80px);
+    padding-top: rem(160px);
   }
 }
 
